// Vitest Snapshot v1

exports[`format > it formats component-class.gjs 1`] = `
"import Component from \\"@glimmer/component\\";

/** It's a component */
class MyComponent extends Component {
  <template>
    <h1>
      Class top level template. Class top level template. Class top level
      template. Class top level template. Class top level template.
    </h1>
  </template>
}
"
`;

exports[`format > it formats component-class-with-template-literal.gjs 1`] = `
"import Component from \\"@glimmer/component\\";

/** It's a component */
class MyComponent extends Component {
  <template>
    <h1>
      Class top level template. Class top level template. Class top level
      template. Class top level template. Class top level template.
    </h1>
  </template>

  what = \`template literal that is not a template\`;
}
"
`;

exports[`format > it formats default-export.gjs 1`] = `
"export default <template>
  Explicit default export module top level component. Explicit default export
  module top level component. Explicit default export module top level
  component. Explicit default export module top level component. Explicit
  default export module top level component.
</template>
"
`;

exports[`format > it formats exported-mod-var.gjs 1`] = `
"export const Exported = <template>
  Exported variable template. Exported variable template. Exported variable
  template. Exported variable template. Exported variable template. Exported
  variable template. Exported variable template.
</template>
"
`;

exports[`format > it formats js-only.gjs 1`] = `
"const num = 1;
"
`;

exports[`format > it formats multiple-declarations-no-semi.gjs 1`] = `
"const bool = false,
  ModVar3 = <template>
    <h1>
      Module variable template. Module variable template. Module variable
      template. Module variable template. Module variable template. Module
      variable template. Module variable template. Module variable template.
    </h1>
  </template>,
  ModVar4 = <template>Second module variable template.</template>
"
`;

exports[`format > it formats multiple-declarations-with-semi.gjs 1`] = `
"const ModVar1 = <template>
    <h1>
      Module variable template. Module variable template. Module variable
      template. Module variable template. Module variable template. Module
      variable template. Module variable template. Module variable template.
    </h1>
  </template>,
  ModVar2 = <template>Second module variable template.</template>,
  num = 1;
"
`;

exports[`format > it formats one-line.gjs 1`] = `
"const Oneline = <template>Module variable template (one line).</template>
"
`;

exports[`format > it formats simple.gjs 1`] = `
"<template>what</template>
"
`;
